--- a/FlightAdministrator/force-app/main/default/classes/FlightController.cls
+++ b/FlightAdministrator/force-app/main/default/classes/FlightController.cls
@@ -9,19 +9,19 @@ public class FlightController {
         }
     }
 
-    @AuraEnabled(cacheable=true)
-    public static List<Flight__c> fetchFlights() {
+    @AuraEnabled
+    public static Flight__c fetchFlightByDepartureAirportIdAndArrivalAirportId(Id departureAirportId, Id arrivalAirportId) {
         try {
-            return FlightSelector.fetchFlights();
+            return FlightSelector.fetchFlightByDepartureAirportIdAndArrivalAirportId(departureAirportId, arrivalAirportId);
         } catch(Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
     }
 
     @AuraEnabled
-    public static void saveFlight(List<Id> airportIds) {
+    public static void saveFlight(Id departureAirportId, Id arrivalAirportId) {
         try {
-            FlightService.handleSaveFlight(airportIds);
+            FlightService.handleSaveFlight(departureAirportId, arrivalAirportId);
         } catch(Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
