--- a/FlightAdministrator/force-app/main/default/classes/FlightSelector.cls
+++ b/FlightAdministrator/force-app/main/default/classes/FlightSelector.cls
@@ -17,4 +17,28 @@ public class FlightSelector {
                 Flight__c
         ];
     }
+
+    /**
+     * Retrieves flight record by DepartureAirport__c and ArrivalAirport__c.
+     * @param departureAirportId departure airport id
+     * @param arrivalAirportId arrival airport id
+     *
+     * @return flight record
+     */
+    public static Flight__c fetchFlightByDepartureAirportIdAndArrivalAirportId(Id departureAirportId, Id arrivalAirportId) {
+        return [
+            SELECT
+                Id,
+                Name,
+                DepartureAirport__c,
+                ArrivalAirport__c,
+                FlightDistance__c
+            FROM
+                Flight__c
+            WHERE 
+                DepartureAirport__c = :departureAirportId
+                AND ArrivalAirport__c = :arrivalAirportId
+            LIMIT 1
+        ];
+    }
 }
